MPL/test/MplPasses/TypeChecker/cases/typecheck/positive/1.mpl
fun v1 :: A -> A =
    a -> a
