MPL/test/MplPasses/TypeChecker/cases/typecheck/negative/2.mpl
fun nf1 :: B -> A =
    a -> a
